tests/ui/associated-type-bounds/conflicting-bounds-different-generics-unsound.stderr
error[E0038]: the trait `Sub` is not dyn compatible
  --> $DIR/conflicting-bounds-different-generics-unsound.rs:41:37
   |
LL |     require_trait::<'a, A1, A2, dyn Sub<'a, A1, A2>, C>(payload)
   |                                     ^^^^^^^^^^^^^^^ `Sub` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/conflicting-bounds-different-generics-unsound.rs:11:10
   |
LL |     type Assoc;
   |          ^^^^^ ...because it has conflicting associated item bounds for Assoc in supertraits
...
LL | trait Sub<'a, A1, A2>: Super<A1, Assoc = Src<'a>> + Super<A2, Assoc = Dst> {}
   |       --- this trait is not dyn compatible...

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
